<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_spotify">SPOTIFY STREAMER</string>
    <string name="btn_scores">SCORES APP</string>
    <string name="btn_library">LIBRARY APP</string>
    <string name="btn_build">BUILD IT BIGGER</string>
    <string name="btn_xyz">XYZ READER</string>
    <string name="btn_cap">CAPSTONE: MY OWN APP</string>
</resources>
